--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -17,3 +17,13 @@ $positive  = #21BA45
 $negative  = #C10015
 $info      = #31CCEC
 $warning   = #F2C037
+
+
+$breakpoint-xs = 600px
+$breakpoint-sm = 960px
+$breakpoint-md = 1264px
+$breakpoint-lg = 1904px
+
+$primary   = #4caf50
+$secondary = #ffd600
+$tertiary  = #c7a500
