--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -11,15 +11,35 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+$typography-font-family:
+  'Inter', 'Geist', '-apple-system', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary: #1976d2;
+$secondary: #26a69a;
+$accent: #9c27b0;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark: #1d1d1d;
+$dark-page: #121212;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #21ba45;
+$negative: #c10015;
+$info: #31ccec;
+$warning: #f2c037;
+
+$breakpoint-xs: 820px;
+$breakpoint-sm: 1200px;
+$breakpoint-md: 1600px;
+$breakpoint-lg: 2400px;
+
+$primary: #205b13;
+$secondary: #027be3;
+$tertiary: #c7a500;
+
+$h1: ();
+$h2: ();
+$h3: ();
+$h4: ();
+$h5: ();
+$h6: ();
